html-reporter: fix alignment of info div text (#739)

--- a/python_ta/reporters/templates/stylesheet.css
+++ b/python_ta/reporters/templates/stylesheet.css
@@ -115,7 +115,7 @@ section {
 }
 
 .error-link {
-    line-height: 25px;
+    line-height: 35px;
 }
 
 .error-link a {
@@ -191,7 +191,7 @@ section {
 }
 
 .occurrences, .shown {
-    line-height: 25px;
+    line-height: 35px;
     padding-left: 20px;
     vertical-align: middle;
 }
